// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statuses > \`create\` > should invoke \`call\` 1`] = `
[
  [
    "crm.status.add",
    {
      "fields": {
        "NAME": "Test name",
      },
    },
  ],
]
`;

exports[`Statuses > \`get\` > should invoke \`call\` 1`] = `
[
  [
    "crm.status.get",
    {
      "id": "77",
    },
  ],
]
`;

exports[`Statuses > \`list\` > should invoke \`call\` 1`] = `
[
  [
    "crm.status.list",
    {
      "filter": {
        "ENTITY_ID": "STATUS",
      },
      "order": {
        "NAME": "ASC",
      },
    },
  ],
]
`;

exports[`Statuses > \`list\` > should work without optional params 1`] = `
[
  [
    "crm.status.list",
    {},
  ],
]
`;

exports[`Statuses > \`update\` > should invoke \`call\` 1`] = `
[
  [
    "crm.status.update",
    {
      "fields": {
        "NAME": "Test name",
      },
      "id": "77",
    },
  ],
]
`;

exports[`Statuses > \`update\` > should work without optional params 1`] = `
[
  [
    "crm.status.update",
    {
      "fields": {
        "NAME": "Test name",
      },
      "id": "77",
    },
  ],
]
`;

exports[`Statuses > should expose API methods 1`] = `
{
  "create": [Function],
  "delete": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
